--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -166,12 +166,12 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a class="active" href="index.html">Home</a></li>
-                        <li><a href="features.html">Features </a></li>
-                        <li><a href="domain.html">Domain</a></li>
-                        <li><a href="hosting.html">Hosting</a></li>
-                        <li><a href="pricing.html">Pricing</a></li>
-                        <li><a href="testimonials.html">Testimonials</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="contact.html">오답노트</a></li>
+                        <li><a href="features.html">게시판 </a></li>
+                        <li><a href="domain.html">스터디 그룹</a></li>
+                        <li><a href="hosting.html">학습 현황</a></li>
+                        <li><a href="pricing.html">플래너</a></li>
+                        <li><a href="testimonials.html">문제은행</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a class="btn-light btn-radius btn-brd log" href="#" data-toggle="modal" data-target="#login"><i class="flaticon-padlock"></i> Customer Login</a></li>
