--- a/WebContent/editProfile.html
+++ b/WebContent/editProfile.html
@@ -32,40 +32,21 @@
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet"> 
+  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- bootstrap icon -->
-
-
+  <!-- =======================================================
+  * Template Name: Bell - v2.1.0
+  * Template URL: https://bootstrapmade.com/bell-free-bootstrap-4-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
 </head>
 
 <body>
-  <!-- ======= Hero Section ======= -->
-  <section class="hero">
-    <div class="container text-center">
-      <div class="row">
-        <div class="col-md-12">
-          <a class="hero-brand" href="index.html" title="Home"><img alt="Ing Logo" src="assets/img/logo.png"></a>
-        </div>
-      </div>
-
-      <div class="col-md-12">
-        <h1>
-          A Wrong Answer Notes for Your Success
-        </h1>
-
-        <p class="tagline">
-          This is a effective way making your wrong answer notes. you can make note easy.
-        </p>
-        <a class="btn btn-full scrollto" href="#about">Get Started Now</a>
-      </div>
-    </div>
-
-  </section><!-- End Hero -->
 
   <!-- ======= Header ======= -->
   <header id="header">
@@ -160,181 +141,72 @@
 
   <main id="main">
 
-    <!-- ======= About Section ======= -->
-    <section class="about" id="about">
-
-      <div class="container text-center">
-        <h2>
-          About Your Wrong Answer Notes
-        </h2>
-
-        <p>
-          this graph shows how many you have wrong answer notes.
-        </p>
-
-        <div class="row stats-row">
-          <div class="stats-col text-center col-md-4 col-sm-4">
-            <div class="circle">
-              <span class="stats-no" data-toggle="counter-up">200</span> 오답노트 문제 수
-            </div>
-          </div>
-
-          <div class="stats-col text-center col-md-4 col-sm-4">
-            <div class="circle">
-              <span class="stats-no" data-toggle="counter-up">79</span> 해결한 오답 수
-            </div>
-          </div>
-
-          <div class="stats-col text-center col-md-4 col-sm-4">
-            <div class="circle">
-              <span class="stats-no" data-toggle="counter-up">100</span> 미해결 오답 수
-            </div>
-          </div>
-        </div>
-      </div>
-    </section><!-- End About Section -->
-
-    <!-- ======= Welcome Section ======= -->
-    <section class="welcome text-center">
-      <h2>Welcom to Ing</h2>
-      <p>
-        This is the most powerful Website making your wrong answer notes
-      </p>
-      <img alt="Ing - A perfect theme" class="gadgets-img hidden-md-down" src="assets/img/gadgets.png">
-    </section><!-- End Welcome Section -->
-
-    <!-- ======= Features Section ======= -->
-    <section class="features" id="features">
-
+    <!-- ======= Breadcrumbs Section ======= -->
+    <section class="breadcrumbs">
       <div class="container">
-        <h2 class="text-center">
-          Features
-        </h2>
 
-        <div class="row">
-          <div class="feature-col col-lg-4 col-xs-12">
-            <div class="card card-block text-center">
-              <div>
-                <div class="feature-icon">
-                  <span class="fa fa-rocket"></span>
-                </div>
-              </div>
-
-              <div>
-                <h3>
-                  Free
-                </h3>
-
-                <p>
-                  
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="feature-col col-lg-4 col-xs-12">
-            <div class="card card-block text-center">
-              <div>
-                <div class="feature-icon">
-                  <span class="fa fa-envelope"></span>
-                </div>
-              </div>
-
-              <div>
-                <h3>
-                  Responsive Layout
-                </h3>
-
-                <p>
-                  Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="feature-col col-lg-4 col-xs-12">
-            <div class="card card-block text-center">
-              <div>
-                <div class="feature-icon">
-                  <span class="fa fa-bell"></span>
-                </div>
-              </div>
-
-              <div>
-                <h3>
-                  Innovative Ideas
-                </h3>
-
-                <p>
-                  Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
-                </p>
-              </div>
-            </div>
-          </div>
+        <div class="d-flex justify-content-between align-items-center">
+          <h2>프로필 변경</h2>
+          <ol>
+            <li><a href="index.html">Home</a></li>
+            <li>마이페이지</li>
+          </ol>
         </div>
 
-        <div class="row">
-          <div class="feature-col col-lg-4 col-xs-12">
-            <div class="card card-block text-center">
-              <div>
-                <div class="feature-icon">
-                  <span class="fa fa-database"></span>
-                </div>
-              </div>
-
-              <div>
-                <h3>
-                  Good Documentation
-                </h3>
-
-                <p>
-                  Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="feature-col col-lg-4 col-xs-12">
-            <div class="card card-block text-center">
-              <div>
-                <div class="feature-icon">
-                  <span class="fa fa-cutlery"></span>
-                </div>
-              </div>
-
-              <div>
-                <h3>
-                  Excellent Features
-                </h3>
-
-                <p>
-                  Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="feature-col col-lg-4 col-xs-12">
-            <div class="card card-block text-center">
-              <div>
-                <div class="feature-icon">
-                  <span class="fa fa-dashboard"></span>
-                </div>
-              </div>
-
-              <div>
-                <h3>
-                  Retina Ready
-                </h3>
-                <p>
-                  Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
-    </section><!-- End Features Section -->
+    </section><!-- End Breadcrumbs Section -->
+
+    <section class="inner-page">
+      <div class="container">
+        <div class="row justify-content-md-center" style="text-align: center;">
+          <div class="col-lg-12">
+            <div class="container">
+              <div class="row justify-content-md-center">
+                  <div class="col-md-6">
+                      <form class="needs-validation" novalidate>
+                          <div class="row">
+                              <div class="col-md-12 mb-1">
+                                  <label for="firstName">이름</label>
+                                  <input type="text" class="form-control" id="firstName" placeholder="입력된 이름"
+                                      value="" disabled>
+                              </div>
+                          </div>
+
+                          <div class="mb-3">
+                              <label for="username">닉네임</label>
+                              <input type="text" class="form-control" id="username" placeholder="이미 입력된 닉네임"
+                                  required>
+                              <div class="invalid-feedback" style="width: 100%;">
+                                  Your username is required.
+
+                              </div>
+                          </div>
+
+                          <div class="mb-3">
+                              <label for="email">이메일 <span class="text-muted">(선택)</span></label>
+                              <input type="email" class="form-control" id="email" placeholder="이미 입력된 이메일">
+                              <div class="invalid-feedback">
+                                  Please enter a valid email address for shipping updates.
+                              </div>
+                          </div>
+
+                          <div class="mb-3">
+                              <label for="address">주소</label>
+                              <input type="text" class="form-control" id="address" placeholder="이미 입력된 주소"
+                                  required>
+                              <div class="invalid-feedback">
+                                  Please enter your shipping address.
+                              </div>
+                          </div>
+                          <hr class="mb-4">                          
+                          <button class="btn btn-primary btn-lg btn-block" type="submit"><a href="MyPage.html" style="text-decoration: none; color: black;">프로필 편집</a></button>          
+                      </form>
+                  </div>
+              </div>
+          </div>
+      </div>
+    </section>
+
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -374,6 +246,14 @@
 
               <li class="list-inline-item">
                 <a href="#portfolio">Portfolio</a>
+              </li>
+
+              <li class="list-inline-item">
+                <a href="#team">Team</a>
+              </li>
+
+              <li class="list-inline-item">
+                <a href="#contact">Contact</a>
               </li>
             </ul>
           </div>
